--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <string name="dialog_title_remove_all">Confirm action</string>
     <string name="dialog_content_remove_all">Are you sure you want to proceed?</string>
+    <string name="title_name_editor">Name picker</string>
 </resources>
